--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Jerin\AppData\Local\Temp\testng-eclipse--610749175\testng-customsuite.xml</span>
+                    <span>C:\Users\Jerin\AppData\Local\Temp\testng-eclipse-1531982279\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.loginpage.Validloginwithdashboard" class="method navigator-link" hash-for-method="hrms">hrms</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.loginpage.Validloginwithdashboard" class="method navigator-link" hash-for-method="contactinfo">contactinfo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.loginpage.Validloginwithdashboard" class="method navigator-link" hash-for-method="crm">crm</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.loginpage.Validloginwithdashboard" class="method navigator-link" hash-for-method="lead">lead</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.loginpage.Validloginwithdashboard" class="method navigator-link" hash-for-method="validationmessageofcontactinfo">validationmessageofcontactinfo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.loginpage.Validloginwithdashboard" class="method navigator-link" hash-for-method="validationmessageofsalesfollowup">validationmessageofsalesfollowup</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -132,9 +152,37 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="hrms">
-                  </a> <!-- hrms -->
-                  <span class="method-name">hrms</span>
+                  <a name="contactinfo">
+                  </a> <!-- contactinfo -->
+                  <span class="method-name">contactinfo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="crm">
+                  </a> <!-- crm -->
+                  <span class="method-name">crm</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="lead">
+                  </a> <!-- lead -->
+                  <span class="method-name">lead</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validationmessageofcontactinfo">
+                  </a> <!-- validationmessageofcontactinfo -->
+                  <span class="method-name">validationmessageofcontactinfo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validationmessageofsalesfollowup">
+                  </a> <!-- validationmessageofsalesfollowup -->
+                  <span class="method-name">validationmessageofsalesfollowup</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -149,7 +197,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Jerin\AppData\Local\Temp\testng-eclipse--610749175\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Jerin\AppData\Local\Temp\testng-eclipse-1531982279\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -198,20 +246,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validcrendentials')
+data.setCell(0, 1, 'contactinfo')
 data.setCell(0, 2, 'com.loginpage.Validloginwithdashboard')
-data.setCell(0, 3, 5575);
+data.setCell(0, 3, 20079);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'hrms')
+data.setCell(1, 1, 'validcrendentials')
 data.setCell(1, 2, 'com.loginpage.Validloginwithdashboard')
-data.setCell(1, 3, 2120);
+data.setCell(1, 3, 5078);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'validationmessageofcontactinfo')
+data.setCell(2, 2, 'com.loginpage.Validloginwithdashboard')
+data.setCell(2, 3, 979);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'lead')
+data.setCell(3, 2, 'com.loginpage.Validloginwithdashboard')
+data.setCell(3, 3, 951);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'validationmessageofsalesfollowup')
+data.setCell(4, 2, 'com.loginpage.Validloginwithdashboard')
+data.setCell(4, 3, 652);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'crm')
+data.setCell(5, 2, 'com.loginpage.Validloginwithdashboard')
+data.setCell(5, 3, 348);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -226,9 +290,18 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.loginpage.Validloginwithdashboard</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">hrms</span>
+                <br/>
+                <span class="ignored-method-name">searchbar</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -244,11 +317,27 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">validcrendentials</span>
-                <span class="method-start">5239 ms</span>
+                <span class="method-start">5459 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">hrms</span>
-                <span class="method-start">10828 ms</span>
+                <span class="method-name">crm</span>
+                <span class="method-start">10541 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">lead</span>
+                <span class="method-start">10892 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">validationmessageofcontactinfo</span>
+                <span class="method-start">11848 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">contactinfo</span>
+                <span class="method-start">12832 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">validationmessageofsalesfollowup</span>
+                <span class="method-start">32914 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
