--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,979</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">33,592</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.loginpage.Validloginwithdashboard</td><td><a href="#m0">hrms</a></td><td rowspan="1">1720571509720</td><td rowspan="1">2120</td></tr><tr class="passedeven"><td><a href="#m1">validcrendentials</a></td><td rowspan="1">1720571504131</td><td rowspan="1">5575</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">com.loginpage.Validloginwithdashboard</td><td><a href="#m0">contactinfo</a></td><td rowspan="1">1720745890067</td><td rowspan="1">20079</td></tr><tr class="passedeven"><td><a href="#m1">crm</a></td><td rowspan="1">1720745887776</td><td rowspan="1">348</td></tr><tr class="passedeven"><td><a href="#m2">lead</a></td><td rowspan="1">1720745888127</td><td rowspan="1">951</td></tr><tr class="passedeven"><td><a href="#m3">validationmessageofcontactinfo</a></td><td rowspan="1">1720745889083</td><td rowspan="1">979</td></tr><tr class="passedeven"><td><a href="#m4">validationmessageofsalesfollowup</a></td><td rowspan="1">1720745910149</td><td rowspan="1">652</td></tr><tr class="passedeven"><td><a href="#m5">validcrendentials</a></td><td rowspan="1">1720745882694</td><td rowspan="1">5078</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.loginpage.Validloginwithdashboard#hrms</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.loginpage.Validloginwithdashboard#validcrendentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.loginpage.Validloginwithdashboard#contactinfo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.loginpage.Validloginwithdashboard#crm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.loginpage.Validloginwithdashboard#lead</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.loginpage.Validloginwithdashboard#validationmessageofcontactinfo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.loginpage.Validloginwithdashboard#validationmessageofsalesfollowup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.loginpage.Validloginwithdashboard#validcrendentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
