--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7f793">  <td>24/07/09 17:31:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validcrendentials()[pri:1, instance:com.loginpage.Validloginwithdashboard@ffaa6af]">validcrendentials</td> 
+<tr bgcolor="a7f793">  <td>24/07/11 17:58:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.contactinfo()[pri:5, instance:com.loginpage.Validloginwithdashboard@729d991e]">contactinfo</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/09 17:31:49</td>   <td>5589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.hrms()[pri:2, instance:com.loginpage.Validloginwithdashboard@ffaa6af]">hrms</td> 
+<tr bgcolor="a7f793">  <td>24/07/11 17:58:07</td>   <td>-2291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.crm()[pri:2, instance:com.loginpage.Validloginwithdashboard@729d991e]">crm</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/09 17:31:38</td>   <td>-5234</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validloginwithdashboard.launchbrowser()[pri:0, instance:com.loginpage.Validloginwithdashboard@ffaa6af]">&gt;&gt;launchbrowser</td> 
+<tr bgcolor="a7f793">  <td>24/07/11 17:57:57</td>   <td>-12828</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validloginwithdashboard.launchbrowser()[pri:0, instance:com.loginpage.Validloginwithdashboard@729d991e]">&gt;&gt;launchbrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/11 17:58:08</td>   <td>-1940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.lead()[pri:3, instance:com.loginpage.Validloginwithdashboard@729d991e]">lead</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/11 17:58:02</td>   <td>-7373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validcrendentials()[pri:1, instance:com.loginpage.Validloginwithdashboard@729d991e]">validcrendentials</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/11 17:58:09</td>   <td>-984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofcontactinfo()[pri:4, instance:com.loginpage.Validloginwithdashboard@729d991e]">validationmessageofcontactinfo</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/11 17:58:30</td>   <td>20082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofsalesfollowup()[pri:6, instance:com.loginpage.Validloginwithdashboard@729d991e]">validationmessageofsalesfollowup</td> 
+  <td>main@943010986</td>   <td></td> </tr>
 </table>
