updated test cases

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,15 +9,55 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">33,592</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">14</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">38,914</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">com.loginpage.Validloginwithdashboard</td><td><a href="#m0">contactinfo</a></td><td rowspan="1">1720745890067</td><td rowspan="1">20079</td></tr><tr class="passedeven"><td><a href="#m1">crm</a></td><td rowspan="1">1720745887776</td><td rowspan="1">348</td></tr><tr class="passedeven"><td><a href="#m2">lead</a></td><td rowspan="1">1720745888127</td><td rowspan="1">951</td></tr><tr class="passedeven"><td><a href="#m3">validationmessageofcontactinfo</a></td><td rowspan="1">1720745889083</td><td rowspan="1">979</td></tr><tr class="passedeven"><td><a href="#m4">validationmessageofsalesfollowup</a></td><td rowspan="1">1720745910149</td><td rowspan="1">652</td></tr><tr class="passedeven"><td><a href="#m5">validcrendentials</a></td><td rowspan="1">1720745882694</td><td rowspan="1">5078</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.loginpage.Validloginwithdashboard</td><td><a href="#m0">verifytheinvalidname</a></td><td rowspan="1">1720829216898</td><td rowspan="1">1693</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="14">com.loginpage.Validloginwithdashboard</td><td><a href="#m1">contactinfo</a></td><td rowspan="1">1720829193837</td><td rowspan="1">20093</td></tr><tr class="passedeven"><td><a href="#m2">crm</a></td><td rowspan="1">1720829191461</td><td rowspan="1">308</td></tr><tr class="passedeven"><td><a href="#m3">lead</a></td><td rowspan="1">1720829191771</td><td rowspan="1">1141</td></tr><tr class="passedeven"><td><a href="#m4">manadatorysymbolofbranch</a></td><td rowspan="1">1720829218913</td><td rowspan="1">47</td></tr><tr class="passedeven"><td><a href="#m5">mandatorysymbolofemail</a></td><td rowspan="1">1720829218779</td><td rowspan="1">133</td></tr><tr class="passedeven"><td><a href="#m6">mandatorysymbolofname</a></td><td rowspan="1">1720829218597</td><td rowspan="1">54</td></tr><tr class="passedeven"><td><a href="#m7">mandatorysymbolofphonenumberfield</a></td><td rowspan="1">1720829218700</td><td rowspan="1">74</td></tr><tr class="passedeven"><td><a href="#m8">mandotrysymboloftype</a></td><td rowspan="1">1720829218653</td><td rowspan="1">44</td></tr><tr class="passedeven"><td><a href="#m9">validationmessageofcontactinfo</a></td><td rowspan="1">1720829192915</td><td rowspan="1">918</td></tr><tr class="passedeven"><td><a href="#m10">validationmessageofsalesfollowup</a></td><td rowspan="1">1720829213935</td><td rowspan="1">645</td></tr><tr class="passedeven"><td><a href="#m11">validcrendentials</a></td><td rowspan="1">1720829185696</td><td rowspan="1">5754</td></tr><tr class="passedeven"><td><a href="#m12">verifycheckbox</a></td><td rowspan="1">1720829214581</td><td rowspan="1">312</td></tr><tr class="passedeven"><td><a href="#m13">verifyname</a></td><td rowspan="1">1720829214895</td><td rowspan="1">1613</td></tr><tr class="passedeven"><td><a href="#m14">verifythedropdown</a></td><td rowspan="1">1720829216511</td><td rowspan="1">385</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.loginpage.Validloginwithdashboard#contactinfo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.loginpage.Validloginwithdashboard#crm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.loginpage.Validloginwithdashboard#lead</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.loginpage.Validloginwithdashboard#validationmessageofcontactinfo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.loginpage.Validloginwithdashboard#validationmessageofsalesfollowup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.loginpage.Validloginwithdashboard#validcrendentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.loginpage.Validloginwithdashboard#verifytheinvalidname</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The name field should not accept numbers. expected [false] but found [true]
+	at org.testng.Assert.fail(Assert.java:99)
+	at org.testng.Assert.failNotEquals(Assert.java:1037)
+	at org.testng.Assert.assertFalse(Assert.java:67)
+	at com.loginpage.Validloginwithdashboard.verifytheinvalidname(Validloginwithdashboard.java:249)
+	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+	at org.testng.TestRunner.privateRun(TestRunner.java:794)
+	at org.testng.TestRunner.run(TestRunner.java:596)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
+	at org.testng.TestNG.runSuites(TestNG.java:1063)
+	at org.testng.TestNG.run(TestNG.java:1031)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.loginpage.Validloginwithdashboard#contactinfo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.loginpage.Validloginwithdashboard#crm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.loginpage.Validloginwithdashboard#lead</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.loginpage.Validloginwithdashboard#manadatorysymbolofbranch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.loginpage.Validloginwithdashboard#mandatorysymbolofemail</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.loginpage.Validloginwithdashboard#mandatorysymbolofname</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.loginpage.Validloginwithdashboard#mandatorysymbolofphonenumberfield</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">com.loginpage.Validloginwithdashboard#mandotrysymboloftype</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">com.loginpage.Validloginwithdashboard#validationmessageofcontactinfo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">com.loginpage.Validloginwithdashboard#validationmessageofsalesfollowup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">com.loginpage.Validloginwithdashboard#validcrendentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">com.loginpage.Validloginwithdashboard#verifycheckbox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">com.loginpage.Validloginwithdashboard#verifyname</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m14">com.loginpage.Validloginwithdashboard#verifythedropdown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
