--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7f793">  <td>24/07/11 17:58:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.contactinfo()[pri:5, instance:com.loginpage.Validloginwithdashboard@729d991e]">contactinfo</td> 
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.crm()[pri:2, instance:com.loginpage.Validloginwithdashboard@36916eb0]">crm</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/11 17:58:07</td>   <td>-2291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.crm()[pri:2, instance:com.loginpage.Validloginwithdashboard@729d991e]">crm</td> 
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:56</td>   <td>25050</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifythedropdown()[pri:9, instance:com.loginpage.Validloginwithdashboard@36916eb0]">verifythedropdown</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/11 17:57:57</td>   <td>-12828</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validloginwithdashboard.launchbrowser()[pri:0, instance:com.loginpage.Validloginwithdashboard@729d991e]">&gt;&gt;launchbrowser</td> 
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:58</td>   <td>27452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.manadatorysymbolofbranch()[pri:15, instance:com.loginpage.Validloginwithdashboard@36916eb0]">manadatorysymbolofbranch</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:53</td>   <td>22474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofsalesfollowup()[pri:6, instance:com.loginpage.Validloginwithdashboard@36916eb0]">validationmessageofsalesfollowup</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:58</td>   <td>27192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandotrysymboloftype()[pri:12, instance:com.loginpage.Validloginwithdashboard@36916eb0]">mandotrysymboloftype</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:56</td>   <td>25437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifytheinvalidname()[pri:10, instance:com.loginpage.Validloginwithdashboard@36916eb0]">verifytheinvalidname</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:20</td>   <td>-11380</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validloginwithdashboard.launchbrowser()[pri:0, instance:com.loginpage.Validloginwithdashboard@36916eb0]">&gt;&gt;launchbrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/11 17:58:08</td>   <td>-1940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.lead()[pri:3, instance:com.loginpage.Validloginwithdashboard@729d991e]">lead</td> 
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:25</td>   <td>-5765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validcrendentials()[pri:1, instance:com.loginpage.Validloginwithdashboard@36916eb0]">validcrendentials</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/11 17:58:02</td>   <td>-7373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validcrendentials()[pri:1, instance:com.loginpage.Validloginwithdashboard@729d991e]">validcrendentials</td> 
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:32</td>   <td>1454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofcontactinfo()[pri:4, instance:com.loginpage.Validloginwithdashboard@36916eb0]">validationmessageofcontactinfo</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/11 17:58:09</td>   <td>-984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofcontactinfo()[pri:4, instance:com.loginpage.Validloginwithdashboard@729d991e]">validationmessageofcontactinfo</td> 
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:54</td>   <td>23434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifyname()[pri:8, instance:com.loginpage.Validloginwithdashboard@36916eb0]">verifyname</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/11 17:58:30</td>   <td>20082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofsalesfollowup()[pri:6, instance:com.loginpage.Validloginwithdashboard@729d991e]">validationmessageofsalesfollowup</td> 
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:58</td>   <td>27318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofemail()[pri:14, instance:com.loginpage.Validloginwithdashboard@36916eb0]">mandatorysymbolofemail</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:33</td>   <td>2376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.contactinfo()[pri:5, instance:com.loginpage.Validloginwithdashboard@36916eb0]">contactinfo</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:58</td>   <td>27136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofname()[pri:11, instance:com.loginpage.Validloginwithdashboard@36916eb0]">mandatorysymbolofname</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:58</td>   <td>27239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofphonenumberfield()[pri:13, instance:com.loginpage.Validloginwithdashboard@36916eb0]">mandatorysymbolofphonenumberfield</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:54</td>   <td>23120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifycheckbox()[pri:7, instance:com.loginpage.Validloginwithdashboard@36916eb0]">verifycheckbox</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:06:31</td>   <td>310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.lead()[pri:3, instance:com.loginpage.Validloginwithdashboard@36916eb0]">lead</td> 
   <td>main@943010986</td>   <td></td> </tr>
 </table>
