--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Jerin\AppData\Local\Temp\testng-eclipse--610749175\testng-customsuite.xml</span>
+                    <span>C:\Users\Reon\AppData\Local\Temp\testng-eclipse-749690799\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -149,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Jerin\AppData\Local\Temp\testng-eclipse--610749175\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Reon\AppData\Local\Temp\testng-eclipse-749690799\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -202,16 +202,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'validcrendentials')
 data.setCell(0, 2, 'com.loginpage.Validloginwithdashboard')
-data.setCell(0, 3, 5575);
+data.setCell(0, 3, 4053);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'hrms')
 data.setCell(1, 2, 'com.loginpage.Validloginwithdashboard')
-data.setCell(1, 3, 2120);
+data.setCell(1, 3, 1616);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -244,11 +244,11 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">validcrendentials</span>
-                <span class="method-start">5239 ms</span>
+                <span class="method-start">4390 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">hrms</span>
-                <span class="method-start">10828 ms</span>
+                <span class="method-start">8448 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
