--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7f793">  <td>24/07/09 17:31:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.hrms()[pri:2, instance:com.loginpage.Validloginwithdashboard@ffaa6af]">hrms</td> 
-  <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/09 17:31:38</td>   <td>-10823</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validloginwithdashboard.launchbrowser()[pri:0, instance:com.loginpage.Validloginwithdashboard@ffaa6af]">&gt;&gt;launchbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/09 17:31:44</td>   <td>-5589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validcrendentials()[pri:1, instance:com.loginpage.Validloginwithdashboard@ffaa6af]">validcrendentials</td> 
-  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="7b6572">  <td>24/07/10 17:39:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.hrms()[pri:2, instance:com.loginpage.Validloginwithdashboard@1af2d44a]">hrms</td> 
+  <td>main@1191654595</td>   <td></td> </tr>
+<tr bgcolor="7b6572">  <td>24/07/10 17:39:46</td>   <td>-8440</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validloginwithdashboard.launchbrowser()[pri:0, instance:com.loginpage.Validloginwithdashboard@1af2d44a]">&gt;&gt;launchbrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1191654595</td>   <td></td> </tr>
+<tr bgcolor="7b6572">  <td>24/07/10 17:39:50</td>   <td>-4058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validcrendentials()[pri:1, instance:com.loginpage.Validloginwithdashboard@1af2d44a]">validcrendentials</td> 
+  <td>main@1191654595</td>   <td></td> </tr>
 </table>
